FILE (GLOB cryptopp_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE (GLOB cryptopp_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_LIBRARY (cryptopp SHARED ${cryptopp_SOURCES})
ADD_LIBRARY (cryptopp_static STATIC  ${cryptopp_SOURCES})
IF (NOT MSVC)
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES OUTPUT_NAME cryptopp)
ENDIF (NOT MSVC)

IF (WIN32 AND NOT MSVC)
  TARGET_LINK_LIBRARIES (cryptopp Ws2_32.lib)
  TARGET_LINK_LIBRARIES (cryptopp_static Ws2_32.lib)
ENDIF (WIN32 AND NOT MSVC)

IF (MSVC)
  INSTALL (TARGETS cryptopp cryptopp_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION bin
           ARCHIVE DESTINATION lib
          )
ELSE (MSVC)
  INSTALL (TARGETS cryptopp cryptopp_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION lib 
           ARCHIVE DESTINATION lib
          )
ENDIF (MSVC)

IF (CMAKE_BUILD_TYPE MATCHES "Debug" OR MSVC)
  ADD_DEFINITIONS (-DNDEBUG)
  SET(OPT_FLAG "-O3")
ELSE (CMAKE_BUILD_TYPE MATCHES "Debug" OR MSVC)
  SET(OPT_FLAG "")
ENDIF (CMAKE_BUILD_TYPE MATCHES "Debug" OR MSVC)
IF (APPLE)
  ADD_DEFINITIONS(-DCRYPTOPP_DISABLE_ASM)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-w -finline-functions ${OPT_FLAG}")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-fPIC -w -finline-functions ${OPT_FLAG}")
ELSEIF (UNIX AND NOT APPLE)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-w -pipe -finline-functions ${OPT_FLAG}")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-fPIC -w -pipe -finline-functions ${OPT_FLAG}")
ELSEIF (WIN32 AND NOT MSVC)
  SET_TARGET_PROPERTIES(cryptopp PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions ${OPT_FLAG} -D_WIN32_WINNT=0x0501")
  SET_TARGET_PROPERTIES(cryptopp_static PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions ${OPT_FLAG} -D_WIN32_WINNT=0x0501")
ELSEIF (WIN32 AND MSVC)
   ADD_DEFINITIONS(-D_WINDOWS)
   ADD_DEFINITIONS(-DWIN32)
   ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
   SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /Ob2 /Oi /Oy /GL /GF /EHsc /MD /Gy /W3 /Zi")
   SET(CMAKE_CXX_FLAGS_DEBUG "/Od /Oi /D_DEBUG /EHsc /MDd /arch::SSE /W3 /ZI")
  CMAKE_POLICY(SET CMP0008 NEW)
ENDIF(APPLE)

