FILE (GLOB udt_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE (GLOB udt_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

IF (MSVC)
  CMAKE_POLICY(SET CMP0008 NEW)
  ADD_DEFINITIONS (-D__WIN32__)
  ADD_DEFINITIONS (-DNDEBUG)
ENDIF (MSVC)

ADD_LIBRARY (udt SHARED ${udt_SOURCES})
ADD_LIBRARY (udt_static STATIC ${udt_SOURCES})
SET_TARGET_PROPERTIES(udt_static PROPERTIES OUTPUT_NAME udt)

IF (WIN32)
  TARGET_LINK_LIBRARIES (udt Ws2_32.lib)
ENDIF (WIN32)

IF (MSVC)
  INSTALL (TARGETS udt udt_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION bin
           ARCHIVE DESTINATION lib
          )
ELSE (MSVC)
  INSTALL (TARGETS udt udt_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION lib
           ARCHIVE DESTINATION lib
          )
ENDIF (MSVC)

IF(APPLE)
  ADD_DEFINITIONS(-DOSX)
  SET_SOURCE_FILES_PROPERTIES(${udt_SOURCES} PROPERTIES COMPILE_FLAGS "-fPIC -w -finline-functions -O3")
ELSEIF(UNIX AND NOT APPLE)
  ADD_DEFINITIONS(-DLINUX)
  SET_SOURCE_FILES_PROPERTIES(${udt_SOURCES} PROPERTIES COMPILE_FLAGS "-fPIC -w -pipe -finline-functions -O3")
ELSEIF(WIN32 AND NOT MSVC)
  ADD_DEFINITIONS(-D__MINGW__ -DWIN32)
  SET_TARGET_PROPERTIES(udt PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions -O3 -D_WIN32_WINNT=0x0501")
  SET_TARGET_PROPERTIES(udt_static PROPERTIES COMPILE_FLAGS "-DDLL_EXPORTS  -mthreads -w -finline-functions -O3 -D_WIN32_WINNT=0x0501")
ENDIF(APPLE)

