FILE (GLOB udt_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE (GLOB udt_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

ADD_LIBRARY (udt SHARED ${udt_SOURCES})
ADD_LIBRARY (udt_static STATIC ${udt_SOURCES})
IF (NOT MSVC)
  SET_TARGET_PROPERTIES(udt_static PROPERTIES OUTPUT_NAME udt)
ENDIF (NOT MSVC)

IF (WIN32 AND NOT MSVC)
  TARGET_LINK_LIBRARIES (udt Ws2_32.lib)
ENDIF (WIN32 AND NOT MSVC)

IF (MSVC)
  INSTALL (TARGETS udt udt_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION bin
           ARCHIVE DESTINATION lib
          )
ELSE (MSVC)
  INSTALL (TARGETS udt udt_static
           RUNTIME DESTINATION bin
           LIBRARY DESTINATION lib
           ARCHIVE DESTINATION lib
          )
ENDIF (MSVC)

IF (CMAKE_BUILD_TYPE MATCHES "Debug")
  SET(OPT_FLAG "-O3")
ELSE (CMAKE_BUILD_TYPE MATCHES "Debug")
  SET(OPT_FLAG "")
ENDIF (CMAKE_BUILD_TYPE MATCHES "Debug")

IF (APPLE)
  ADD_DEFINITIONS(-DOSX)
  SET_TARGET_PROPERTIES(udt PROPERTIES COMPILE_FLAGS "-w -finline-functions ${OPT_FLAG}")
  SET_TARGET_PROPERTIES(udt_static PROPERTIES COMPILE_FLAGS "-fPIC -w -finline-functions ${OPT_FLAG}")
ELSEIF (UNIX AND NOT APPLE)
  ADD_DEFINITIONS(-DLINUX)
  SET_TARGET_PROPERTIES(udt PROPERTIES COMPILE_FLAGS "-w -pipe -finline-functions ${OPT_FLAG}")
  SET_TARGET_PROPERTIES(udt_static PROPERTIES COMPILE_FLAGS "-fPIC -w -pipe -finline-functions ${OPT_FLAG}")
ELSEIF (WIN32 AND NOT MSVC)
  ADD_DEFINITIONS(-D__MINGW__)
  SET_TARGET_PROPERTIES(udt PROPERTIES COMPILE_FLAGS "-mthreads -w -finline-functions ${OPT_FLAG} -D_WIN32_WINNT=0x0501")
  SET_TARGET_PROPERTIES(udt_static PROPERTIES COMPILE_FLAGS "-DDLL_EXPORTS  -mthreads -w -finline-functions ${OPT_FLAG} -D_WIN32_WINNT=0x0501")
ELSEIF (WIN32 AND MSVC)
  CMAKE_POLICY(SET CMP0008 NEW)
  SET_TARGET_PROPERTIES(udt PROPERTIES COMPILE_FLAGS "/D \"UDT_EXPORTS\"")
  SET_TARGET_PROPERTIES(udt_static PROPERTIES COMPILE_FLAGS "/D \"UDT_STATIC\"")
  ADD_DEFINITIONS(-DWIN32)
  ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
  SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /Ob2 /Ot /Oy /GL /D \"NDEBUG\" /EHsc /MD /Gy /W3 /Zi")
  SET(CMAKE_CXX_FLAGS_DEBUG "/Od /Ot /Oy /D \"_DEBUG\" /EHsc /MDd /ZI")
ELSEIF(WIN32 AND MSVC)
ENDIF(APPLE)

